Fixed a layout bug when all items are hidden

--- a/src/css/modules/ftr.scss
+++ b/src/css/modules/ftr.scss
@@ -3,6 +3,8 @@
     text-align: center;
     padding: 8px;
     margin-top: 16px;
+    position: relative;
+    z-index: 6;
     @media(min-width: 500px){
         padding: 12px;
     }
